
  KSP

    Added additional final argument to KSPSetMonitor() an optional destroy routine for the 
    monitor context.
    
    Added -ksp_gmres_krylov_monitor and KSPGMRESKrylovMonitor() to allow one to view the vectors
    in the Krylov space.
     
    
  SLES
 
    Added SLESSetDiagonalScale(), -sles_diagonal_scale to allow one to scale the system
    before computing the preconditioner and solving. For certain systems this can improve the
    convergence of the iterative method. But be careful because this CHANGES the right hand side
    and the matrix unless you also use the options SLESSetDiagonalScaleFix(), -sles_diagonal_scale_fix
   
 

  PC

  

 
  AO

    

  IS

    
  Draw

    

    

  General

   Changed these routines to return an error code.
extern int   PetscStrchr(const char[],char,char **);
extern int   PetscStrrchr(const char[],char,char **);
extern int   PetscStrstr(const char[],const char[],char **);
extern int   PetscStrtok(const char[],const char[],char **);    

   The Fortran versions of the PetscStrxxx() and PetscMemxxx() routines also now 
have the error flag as the final argument.
   
   Added CHKMEMQ and CHKMEMA macros to help track down memory corruption.
   
   PetscFree() now always returns an error code that may be checked with CHKERRQ(). 
   On systems where free() returns a void (and the user has no access to an error
   condition in free(), PetscFree() returns 0 i.e. no error; on other systems it 
   returns the error number from free.

  Viewer

   

  SNES 

  Added SNESVecViewMonitorUpdate() and -snes_vecmonitor_update to display the Newton update at each iteration.    

  Added additional final argument to SNESSetMonitor() an optional destroy routine for the 
    monitor context.

  Changed calling sequence of MatSNESMFAddNullSpace() to take PCNullSpace object rather than 
  array of vectors.

  Added SNESSetLineSearchParams() and  SNESGetLineSearchParams(), contributed by Matt Knepley.

  DA

    

  TS

   